# ez-occ

./: .gitignore  README.md  init_project.sh  project_template.py  pyproject.toml  requirements.txt  run-tests.sh  setup.py
blender/: README.md  blender_visualize_script.py  launch_blender_with_vis_script.sh
cpp_libs/ocaf_wrapper/: CMakeLists.txt
cpp_libs/ocaf_wrapper/cmake/modules/: FindOCC.cmake
cpp_libs/ocaf_wrapper/inc/: ocaf_wrapper.h
cpp_libs/ocaf_wrapper/swig/: ocaf_wrapper.i
cpp_libs/util_wrapper/: CMakeLists.txt
cpp_libs/util_wrapper/inc/: surface_mapper.h  util_wrapper.h
cpp_libs/util_wrapper/swig/: util_wrapper.i
cpp_libs/vtk_occ_bridge/: CMakeLists.txt
docker/: Dockerfile  docker-compose.yml  docker_build.sh  docker_run.sh  requirements.txt
examples/: bolt.py  chess_piece.py  compile_examples.py  dish.py  enclosure.py  example.py  gears.py  requirements.txt
projects/: examples.py  stepper_gearbox.py
projects/youtube_diy_iot_pan_tilt/: pantilt_base.py  pantilt_enclosure.py  pantilt_top.py  sq_tube.py
prolog_tests/: README.md  geom.pl
src/ezocc/: api.py  assertion_utils.py  constants.py  decorators.py  gcs.py  humanization.py  occutils_python.py  part_cache.py  part_display.py  part_manager.py  stock_parts.py  subshape_mapping.py  svg_parser.py  type_utils.py
src/ezocc/alg/: adjacent_edges_to_wire.py  canonical_recognition.py  cleanup.py  math.py  offset.py  offset_face_with_holes.py  outer_wire.py  outer_wire_lhand.py  pairwise_edge_fillet.py  procedural.py  remove_internal_faces.py  set_placeable_pnt.py  wires_from_edges.py
src/ezocc/alg/geometry_exploration/: outer_wire_by_bool.py  outer_wire_by_tangents.py  seam_identifier.py
src/ezocc/alg/joinery/: README.md  box_segment_joiner.py  chamfer_segment_joiner.py  lofting_segment_joiner.py  pipe_segment_joiner.py  segment_joiner.py
src/ezocc/alg/trace/: halt_exception.py
src/ezocc/cad/gui/: README.md  render_spec.py  visualization.py
src/ezocc/cad/model/: event.py  session.py  session_utils.py  work_unit.py  work_unit_factory.py
src/ezocc/cad/visualization_widgets/: visualization_widgets.py
src/ezocc/data_structures/: deferred_value.py  point_like.py
src/ezocc/enclosures/: enclosure_factory.py  shadow_line.py
src/ezocc/gcs_solver/: README.md  parameter.py  system.py  test.py
src/ezocc/gcs_solver/builder/: system_builder.py
src/ezocc/gcs_solver/constraints/: angle_constraint.py  constraint.py  distance_constraint.py  equality_constraint.py  gt_than_constraint.py  hdistance_constraint.py  incidence_constraint.py  length_constraint.py  radius_constraint.py  symmetry_constraint.py  tangency_constraint.py  vdistance_constraint.py
src/ezocc/gcs_solver/deprecated/: gcs.py
src/ezocc/gcs_solver/entities/: bounded_curve_entity.py  circle_arc_entity.py  circle_entity.py  curve_entity.py  entity.py  (+2 more)
src/ezocc/gears/: gear_generator.py
src/ezocc/stock_parts/: alu_extrusion.py  detent.py  living_hinge.py  misc.py  modular_enclosure_system.py
src/ezocc/workplane/: surface_mapping.py  workplane.py
src/pythonoccutils/: gcs.py  humanization.py  occutils_python.py  part_cache.py  part_manager.py  precision.py  stock_parts.py  subshape_mapping.py  svg_parser.py  type_utils.py
src/pythonoccutils/alg/: outer_wire.py  outer_wire_lhand.py  set_placeable_pnt.py
src/pythonoccutils/gears/: gear_generator.py
src/pythonoccutils/workplane/: workplane.py
tst/: bugfix_test.py  default_cache_token_test.py  extents_test.py  gcs_test.py  gear_generator_test.py  part_annotation_test.py  part_bool_test.py  part_cache_test.py  part_factory_test.py  part_operations_test.py  part_query_test.py  part_save_test.py  part_subshapes_test.py  part_test.py  show_box.py  stock_parts_test.py  subshape_map_test.py  surface_mapper_test.py  test_part_driver.py  test_projects.py  test_type_utils.py  test_utils.py  wire_sketcher_test.py
tst/alg/: pairwise_edge_filllet_test.py  part_algorithm_test.py  remove_internal_faces_test.py  trace_edge_perimeter_test.py
tst/alg/joinery/: box_segment_joiner_test.py  chamfer_segment_joiner_test.py  lofting_segment_joiner_test.py  segment_joiner_test.py
tst/data_structures/: deferred_value_test.py  point_like_test.py
(+78 files in other folders)
